Bug 377201 - Home Folder button not working in web browser mode
Summary: Home Folder button not working in web browser mode
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.97
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-04 14:39 UTC by Roberto Castagnola
Modified: 2017-03-18 16:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix 'Home Folder' button action (655 bytes, patch)
2017-03-04 14:39 UTC, Roberto Castagnola
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roberto Castagnola 2017-03-04 14:39:30 UTC
Created attachment 104363 [details]
Fix 'Home Folder' button action

While in web browser mode, if I use 'Home Folder' button I get the error ERR_UNKNOWN_URL_SCHEME

I got it solved with attached patch.
Comment 1 Christoph Feck 2017-03-18 16:19:16 UTC
Git commit 26c9af30d2fb1d8bf229b0e484d3563ac9406b1c by Christoph Feck, on behalf of Roberto Castagnola.
Committed on 18/03/2017 at 16:15.
Pushed by cfeck into branch 'master'.

Fix 'Home Folder' button action

Reviewed by: Christoph Feck

M  +1    -1    src/konqmainwindow.cpp

https://commits.kde.org/konqueror/26c9af30d2fb1d8bf229b0e484d3563ac9406b1c
Comment 2 Christoph Feck 2017-03-18 16:22:20 UTC
Merci, I applied the patch. We prefer reviewing patches using Phabricator, so if you have more patches, please use:

https://phabricator.kde.org/differential/diff/create/

(set Repository to Konqueror)