Fix 'Home Folder' button action

Reviewed by: Christoph Feck

BUG: 377201